--- a/admin/view/template/payment/account.twig
+++ b/admin/view/template/payment/account.twig
@@ -74,9 +74,7 @@
 							<div class="col-sm-10">
 								<div class="input-group">
 									<input type="password" name="payment_worldline_setting[account][api_key][{{ environment['code'] }}]" value="{% if setting['account']['api_key'][environment['code']] %}{{ setting['account']['api_key'][environment['code']] }}{% endif %}" placeholder="{{ attribute(_context, 'entry_api_key' ~ environment['prefix']) }}" id="input-api-key{{ environment['prefix']|replace({'_': '-'}) }}" class="form-control" />
-									<span class="input-group-btn">
-										<button type="button" data-bs-toggle="tooltip" title="{{ button_view }}" class="btn btn-default view-password" field_id="input-api-key{{ environment['prefix']|replace({'_': '-'}) }}"><i class="fas fa-eye"></i></button>
-									</span>
+									<button type="button" data-bs-toggle="tooltip" title="{{ button_view }}" class="btn btn-light view-password" field_id="input-api-key{{ environment['prefix']|replace({'_': '-'}) }}"><i class="fas fa-eye"></i></button>
 									<div id="error-api-key{{ environment['prefix']|replace({'_': '-'}) }}" class="invalid-feedback"></div>
 								</div>
 							</div>
@@ -86,9 +84,7 @@
 							<div class="col-sm-10">
 								<div class="input-group">
 									<input type="password" name="payment_worldline_setting[account][api_secret][{{ environment['code'] }}]" value="{% if setting['account']['api_secret'][environment['code']] %}{{ setting['account']['api_secret'][environment['code']] }}{% endif %}" placeholder="{{ attribute(_context, 'entry_api_secret' ~ environment['prefix']) }}" id="input-api-secret{{ environment['prefix']|replace({'_': '-'}) }}" class="form-control" />
-									<span class="input-group-btn">
-										<button type="button" data-bs-toggle="tooltip" title="{{ button_view }}" class="btn btn-default view-password" field_id="input-api-secret{{ environment['prefix']|replace({'_': '-'}) }}"><i class="fas fa-eye"></i></button>
-									</span>
+									<button type="button" data-bs-toggle="tooltip" title="{{ button_view }}" class="btn btn-light view-password" field_id="input-api-secret{{ environment['prefix']|replace({'_': '-'}) }}"><i class="fas fa-eye"></i></button>
 									<div id="error-api-secret{{ environment['prefix']|replace({'_': '-'}) }}" class="invalid-feedback"></div>
 								</div>
 							</div>
@@ -111,9 +107,7 @@
 							<div class="col-sm-10">
 								<div class="input-group">
 									<input type="password" name="payment_worldline_setting[account][webhook_key][{{ environment['code'] }}]" value="{% if setting['account']['webhook_key'][environment['code']] %}{{ setting['account']['webhook_key'][environment['code']] }}{% endif %}" placeholder="{{ attribute(_context, 'entry_webhook_key' ~ environment['prefix']) }}" id="input-webhook-key{{ environment['prefix']|replace({'_': '-'}) }}" class="form-control" />
-									<span class="input-group-btn">
-										<button type="button" data-bs-toggle="tooltip" title="{{ button_view }}" class="btn btn-default view-password" field_id="input-webhook-key{{ environment['prefix']|replace({'_': '-'}) }}"><i class="fas fa-eye"></i></button>
-									</span>
+									<button type="button" data-bs-toggle="tooltip" title="{{ button_view }}" class="btn btn-light view-password" field_id="input-webhook-key{{ environment['prefix']|replace({'_': '-'}) }}"><i class="fas fa-eye"></i></button>
 									<div id="error-webhook-key{{ environment['prefix']|replace({'_': '-'}) }}" class="invalid-feedback"></div>
 								</div>
 							</div>
@@ -123,9 +117,7 @@
 							<div class="col-sm-10">
 								<div class="input-group">
 									<input type="password" name="payment_worldline_setting[account][webhook_secret][{{ environment['code'] }}]" value="{% if setting['account']['webhook_secret'][environment['code']] %}{{ setting['account']['webhook_secret'][environment['code']] }}{% endif %}" placeholder="{{ attribute(_context, 'entry_webhook_secret' ~ environment['prefix']) }}" id="input-webhook-secret{{ environment['prefix']|replace({'_': '-'}) }}" class="form-control" />
-									<span class="input-group-btn">
-										<button type="button" data-bs-toggle="tooltip" title="{{ button_view }}" class="btn btn-default view-password" field_id="input-webhook-secret{{ environment['prefix']|replace({'_': '-'}) }}"><i class="fas fa-eye"></i></button>
-									</span>
+									<button type="button" data-bs-toggle="tooltip" title="{{ button_view }}" class="btn btn-light view-password" field_id="input-webhook-secret{{ environment['prefix']|replace({'_': '-'}) }}"><i class="fas fa-eye"></i></button>
 									<div id="error-webhook-secret{{ environment['prefix']|replace({'_': '-'}) }}" class="invalid-feedback"></div>
 								</div>
 							</div>
