--- a/catalog/view/template/payment/worldline.twig
+++ b/catalog/view/template/payment/worldline.twig
@@ -32,7 +32,7 @@ $('#worldline-form #worldline-button-confirm').on('click', function() {
 				
 			if (json['error']) {
 				if (json['error']['warning']) {
-					$('#worldline-form').prepend('<div class="alert alert-danger alert-dismissible"><i class="fas fa-exclamation-circle"></i> ' + json['error']['warning'] + ' <button type="button" class="btn-close data-bs-dismiss="alert"></button></div>');
+					$('#worldline-form').prepend('<div class="alert alert-danger alert-dismissible"><i class="fas fa-exclamation-circle"></i> ' + json['error']['warning'] + ' <button type="button" class="btn-close" data-bs-dismiss="alert"></button></div>');
 				}
 			}
 			
