--- a/admin/view/template/extension/payment/worldline/order_status.twig
+++ b/admin/view/template/extension/payment/worldline/order_status.twig
@@ -55,6 +55,21 @@
 							</div>
 						</div>
 						{% endfor %}
+						<div class="form-group">
+							<label class="col-sm-2 control-label" for="input-final-order-status"><span data-toggle="tooltip" title="{{ help_final_order_status }}">{{ entry_final_order_status }}</span></label>
+							<div class="col-sm-10">
+								<div class="well well-sm" style="height: 150px; overflow: auto;">
+									{% for order_status in order_statuses %}
+									<div class="checkbox">
+										<label>
+											<input type="checkbox" name="payment_worldline_setting[final_order_status][]" value="{{ order_status['order_status_id'] }}" {% if order_status['order_status_id'] in setting['final_order_status'] %} checked="checked" {% endif %} />
+											{{ order_status['name'] }}
+										</label>
+									</div>
+									{% endfor %}
+								</div>
+							</div>
+						</div>
 					</form>
 				</div>
 			</div>
