--- a/admin/view/template/payment/order_status.twig
+++ b/admin/view/template/payment/order_status.twig
@@ -50,10 +50,33 @@
 							</div>
 						</div>
 						{% endfor %}
+						<div class="row mb-3">
+							<label class="col-sm-2 col-form-label" for="input-final-order-status"><span data-bs-toggle="tooltip" title="{{ help_final_order_status }}">{{ entry_final_order_status }}</span></label>
+							<div class="col-sm-10">
+								<div id="input-final-order-status" class="form-control" style="height: 150px; overflow: auto;">
+									{% for order_status in order_statuses %}
+									<div class="form-check">
+										<input type="checkbox" name="payment_worldline_setting[final_order_status][]" value="{{ order_status['order_status_id'] }}" id="input-final-order-status-{{ order_status['order_status_id'] }}" class="form-check-input" {% if order_status['order_status_id'] in setting['final_order_status'] %} checked="checked" {% endif %} />
+										<label for="input-final-order-status-{{ order_status['order_status_id'] }}" class="form-check-label">{{ order_status['name'] }}</label>
+									</div>
+									{% endfor %}
+								</div>
+							</div>
+						</div>					  
 					</form>
 				</div>
 			</div>
 		</div>
 	</div>
 </div>
+<style type="text/css">
+
+.payment-worldline .col-form-label span::after {
+	font-family: 'Font Awesome 5 Free';
+	color: #1E91CF;
+	content: '\f059';
+	margin-left: 4px;
+}
+
+</style>	
 {{ footer }}
